--- a/with-nuxt/package.json
+++ b/with-nuxt/package.json
@@ -7,16 +7,29 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "test": "vitest run"
   },
   "dependencies": {
+    "@nuxt/eslint": "^1.1.0",
+    "eslint": "^9.21.0",
     "nuxt": "^3.15.1",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^1.1.0",
+    "@nuxt/test-utils": "^3.17.0",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
+    "happy-dom": "^17.1.3",
+    "playwright-core": "^1.50.1",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "prettier": "^3.5.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.6"
   }
 }
