--- a/with-nuxt/package.json
+++ b/with-nuxt/package.json
@@ -13,9 +13,9 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@nuxt/eslint": "^1.1.0",
     "eslint": "^9.21.0",
     "nuxt": "^3.15.1",
+    "nuxt-auth-utils": "^0.5.16",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -30,6 +30,7 @@
     "prettier": "^3.5.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
-    "vitest": "^3.0.6"
+    "vitest": "^3.0.6",
+    "zod": "^3.24.2"
   }
 }
