--- a/with-nuxt/package.json
+++ b/with-nuxt/package.json
@@ -10,25 +10,35 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "test": "vitest run"
+    "test": "vitest run",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:seed": "tsx server/database/seed.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.3",
     "eslint": "^9.21.0",
-    "nuxt": "^3.15.1",
+    "nuxt": "^3.15.4",
     "nuxt-auth-utils": "^0.5.16",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@libsql/client": "^0.14.0",
     "@nuxt/eslint-config": "^1.1.0",
     "@nuxt/test-utils": "^3.17.0",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.30.4",
     "happy-dom": "^17.1.3",
     "playwright-core": "^1.50.1",
     "postcss": "^8.4.49",
     "prettier": "^3.5.2",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "vitest": "^3.0.6",
     "zod": "^3.24.2"
